2012-02-02  Lars Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-multi-smtp-send-mail): New function.

	* gnus-agent.el (gnus-agent-send-mail-function): Removed.
	(gnus-agentize): Don't set it.
	(gnus-agent-send-mail): Don't use it.

	* gnus-sum.el (gnus-summary-widget-backward): New function and
	keystroke.

	* gnus-compat.el: More the compat functions more compatible.

	* shr.el (shr-put-image): Remove underlines from sliced images.
	(shr-zoom-image): Compute the region to be replaced more correctly.

2012-02-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-msg.el (gnus-gcc-self-resent-messages): New user option.
	(gnus-summary-resend-message-insert-gcc): New function.
	(gnus-summary-resend-message): Modify message-header-setup-hook and
	message-sent-hook to make it work for Gcc.
	(gnus-inews-do-gcc): Update the number of unread articles of groups
	that messages are Gcc'd to.

	* message.el (message-resend): Run message-sent-hook to do Gcc.

2012-02-01  Lars Ingebrigtsen  <larsi@gnus.org>

	* lpath.el: Fix an XEmacs compilation warning.

	* gnus-compat.el: Require `help-fns' to fix compilation error.

	* gnus-registry.el (gnus-registry-fixup-registry): Move the message to
	a higher level to silence compilation.

	* gnus-art.el (gnus-shr-put-image): Take and pass on a `flags'
	parameter to allow controlling the scaling.

	* shr.el (shr-zoom-image): New command and keystroke.
	(shr-put-image): Take a `size' flag to say how to scale the image.

	* gnus-compat.el: Redefine `delete-directory' to provide recursive
	deletion unless already defined.

	* gnus.el (gnus-compat): Require it.

	* gnus-compat.el: New file.

	* gnus-start.el (gnus-clean-old-newsrc): New function.
	(gnus-read-newsrc-file): Use it.

	* mm-archive.el (mm-dissect-archive): Use it to get all file names.
	Use recursive deletion.
	(mm-dissect-archive): Add support for zip files.

	* gnus-util.el (gnus-recursive-directory-files): New function.
